--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             <div class="container portafolio">
                 <div class="portafolio-div">
                     <h2>Hiddle</h2>
-                    <a href="#"><img src="images/portafolio2.jpg" alt="Hiddle" width="300px"></a>
+                    <a href="portafolio/huddle/huddle.html"><img src="images/portafolio2.jpg" alt="Hiddle" width="300px"></a>
                 </div>
                 <div class="portafolio-div">
                     <h2>Sobekco</h2>
-                    <a href="#"><img src="images/portafolio1.jpg" alt="Hiddle" width="300px"></a>
+                    <a href="portafolio/Sobekco/sobekco.html"><img src="images/portafolio1.jpg" alt="Hiddle" width="300px"></a>
                 </div>
                 <div class="portafolio-div">
                     <h2>PracticePlatzi</h2>
