Links añadidos, redes sociales.

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                     </picture>
                     <div>
                         <h3><a href="#"><i class="fas fa-envelope"></i> Isaacdrm10@gmail.com</a></h3>
-                        <h3><a href="#"><i class="fab fa-linkedin"></i> Isaac Rodríguez</a></h3>
-                        <h3><a href="#"><i class="fab fa-twitter"></i> @Isaacdrm10</a></h3>
-                        <h3><a href="#"><i class="fab fa-instagram"></i> @Isaacdrm10</a> </h3>
-                        <h3><a href="#"><i class="fab fa-github"></i> Isaacdrm</a></h3>
+                        <h3><a href="https://www.linkedin.com/in/isaac-rodriguez-943a561a7/"><i class="fab fa-linkedin"></i> Isaac Rodríguez</a></h3>
+                        <h3><a href="https://twitter.com/Isaacdrm10"><i class="fab fa-twitter"></i> @Isaacdrm10</a></h3>
+                        <h3><a href="https://www.instagram.com/isaacdrm10/"><i class="fab fa-instagram"></i> @Isaacdrm10</a> </h3>
+                        <h3><a href="https://github.com/Isaacdrm"><i class="fab fa-github"></i> Isaacdrm</a></h3>
                     </div>
                 </div>
             </div>
@@ -134,10 +134,10 @@
         <div class="container footer">
             <div>&copy; Isaac Rodríguez - 2021</div>
             <div class="socialmedia">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/isaac-rodriguez-943a561a7/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://twitter.com/Isaacdrm10"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/isaacdrm10/"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/Isaacdrm"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
