links ajustados, del portafolio sobekco

--- a/portafolio/Sobekco/servicios.html
+++ b/portafolio/Sobekco/servicios.html
@@ -14,8 +14,8 @@
     <header>
         <div class="header1">
             <div class="logo">
-                <a href="index.html"><img src="img/icono.png" alt="logo" width="60px"></a>
-                <div class="logo2"><a href="index.html"> <h3>SOBEKCO</h3></a></div>
+                <a href="sobekco.html"><img src="img/icono.png" alt="logo" width="60px"></a>
+                <div class="logo2"><a href="sobekco.html"> <h3>SOBEKCO</h3></a></div>
                 
             </div>
             <nav class="navbar">
