Primer Responsive Completado

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </main>
     <footer>
         <div class="container footer">
-            <div>&copy; Isaac Rodríguez - 2021</div>
+            <div class="copyright">&copy; Isaac Rodríguez - 2021</div>
             <div class="socialmedia">
                 <a href="https://www.linkedin.com/in/isaac-rodriguez-943a561a7/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://twitter.com/Isaacdrm10"><i class="fab fa-twitter"></i></a>
