portafolio cuatro 4 sin detalles

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h1 class="titulos">Portafolio</h1>
             <div class="container portafolio">
                 <div class="portafolio-div">
-                    <h2>Hiddle</h2>
+                    <h2>Huddle</h2>
                     <a href="portafolio/huddle/huddle.html"><img src="images/portafolio2.jpg" alt="Hiddle" width="300px"></a>
                 </div>
                 <div class="portafolio-div">
@@ -85,8 +85,8 @@
                     <a href="#"><img src="images/portafolio3.jpg" alt="Hiddle" width="300px"></a>
                 </div>
                 <div class="portafolio-div">
-                    <h2>Hiddle</h2>
-                    <a href="#"><img src="images/portafolio2.jpg" alt="Hiddle" width="300px"></a>
+                    <h2>Article Preview</h2>
+                    <a href="portafolio/ArticlePreview/articlepreview.html"><img src="images/portafolio4.jpg" alt="Hiddle" width="300px"></a>
                 </div>
             </div>
         </section>
@@ -123,7 +123,7 @@
                         <h3><a href="#"><i class="fas fa-envelope"></i> Isaacdrm10@gmail.com</a></h3>
                         <h3><a href="https://www.linkedin.com/in/isaac-rodriguez-943a561a7/"><i class="fab fa-linkedin"></i> Isaac Rodríguez</a></h3>
                         <h3><a href="https://twitter.com/Isaacdrm10"><i class="fab fa-twitter"></i> @Isaacdrm10</a></h3>
-                        <h3><a href="https://www.instagram.com/isaacdrm10/"><i class="fab fa-instagram"></i> @Isaacdrm10</a> </h3>
+                        <h3 style="display: none;"><a href="https://www.instagram.com/isaacdrm10/"><i class="fab fa-instagram"></i> @Isaacdrm10</a> </h3>
                         <h3><a href="https://github.com/Isaacdrm"><i class="fab fa-github"></i> Isaacdrm</a></h3>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
             <div class="socialmedia">
                 <a href="https://www.linkedin.com/in/isaac-rodriguez-943a561a7/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://twitter.com/Isaacdrm10"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/isaacdrm10/"><i class="fab fa-instagram"></i></a>
+                <a style="display: none;" href="https://www.instagram.com/isaacdrm10/"><i class="fab fa-instagram"></i></a>
                 <a href="https://github.com/Isaacdrm"><i class="fab fa-github"></i></a>
             </div>
         </div>
