dos cursos agregados si

--- a/index.html
+++ b/index.html
@@ -93,21 +93,29 @@
         <section id="Conocimiento">
             <h2 class="titulos">Conocimientos</h2>
             <div class="container conocimiento">
-                <div class="conociminto-div">
+                <div class="conocimiento-div">
                     <img src="https://static.platzi.com/media/achievements/1350-09ddb033-354b-4c0c-84a4-56cbb71d0b08.png" width="200" height="200" alt="Curso de Desarrollo Web Online">
                     <h3>Curso de Desarrollo Web Online</h3>
                 </div>
-                <div class="conociminto-div">
+                <div class="conocimiento-div">
                     <img src="https://static.platzi.com/media/achievements/1362-87c8ad3d-a50d-41a2-b023-ad838594e1c9.png" width="200" height="200" alt="Curso de Responsive Design">
                     <h3>Curso de Responsive Design</h3>
                 </div>
-                <div class="conociminto-div">
+                <div class="conocimiento-div">
                     <img src="https://static.platzi.com/media/achievements/badge-introduccion-web-historia-internet-4c18b86e-86f0-4ea0-aa16-5ed1cf53be25.png" width="200" height="200" alt="Curso de Introducción a la Web: Historia y Funcionamiento de Internet">
                     <h3>Curso de Introducción a la Web: Historia y Funcionamiento de Internet</h3>
                 </div>
-                <div class="conociminto-div">
+                <div class="conocimiento-div">
                     <img src="https://static.platzi.com/media/achievements/badge-ing-software-2017-18f503fd-36bd-42d8-b1a1-492865659687.png" width="200" height="200" alt="Fundamentos de Ingeniería de Software">
                     <h3>Fundamentos de Ingeniería de Software</h3>
+                </div>
+                <div class="conocimiento-div">
+                    <img src="https://static.platzi.com/media/achievements/badges-html-css-afa64acb-64a4-486d-96a5-f930fbb7ee32.png" width="200" height="200" alt="Curso Definitivo de HTML y CSS">
+                    <h3>Curso Definitivo de HTML y CSS</h3>
+                </div>
+                <div class="conocimiento-div">
+                    <img src="https://static.platzi.com/media/achievements/badge-github-0b729570-934d-47d8-ba6b-610d7f15e0ec.png" width="200" height="200" alt="Curso Profesional de Git y GitHub">
+                    <h3>Curso Profesional de Git y GitHub</h3>
                 </div>
 
             </div>
