trabajos añadidos new

--- a/portafolio/jimenails/trabajos.html
+++ b/portafolio/jimenails/trabajos.html
@@ -56,6 +56,96 @@
             <div>
                 <img src="images/uñas7.jpg" alt="modelo-uñas">
             </div>
+            <div>
+                <img src="images/uñas10.jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas11 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas12 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas13 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas14 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas15 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas16 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas17 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas18 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas19 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas20 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas21 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas22 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas23 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas24 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas25 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas26 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas27 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas28 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas29 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas30 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas31 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas32 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas33 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas34 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas35 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas36 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas37 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas38 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas40 (1).jpg" alt="modelo-uñas">
+            </div>
 
         </section>
         <div class="fijowhat">
