--- a/portafolio/jimenails/jimenails.html
+++ b/portafolio/jimenails/jimenails.html
@@ -59,6 +59,7 @@
             <div>
                 <img src="images/uñas9.jpg" alt="modelo-uñas">
             </div>
+            
             <div class="vermas"><a href="trabajos.html">Ver más...</a></div>
                 
         </section>
@@ -87,7 +88,7 @@
                 <a href="#" target="_blank"><i class="fas fa-envelope-square"></i></a>
                 <a href="https://www.facebook.com/Jimenails-106906117826736" target="_blank"><i class="fab fa-facebook-square"></i></a>
                 <a href="https://www.instagram.com/jimenails_01/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                <a href="" target="_blank"><i class="fab fa-whatsapp-square"></i></a>
+                <a href="https://wa.me/c/972549052905" target="_blank"><i class="fab fa-whatsapp-square"></i></a>
             </div>
         </div>
 
