--- a/portafolio/jimenails/trabajos.html
+++ b/portafolio/jimenails/trabajos.html
@@ -69,9 +69,6 @@
                 <img src="images/uñas13 (1).jpg" alt="modelo-uñas">
             </div>
             <div>
-                <img src="images/uñas14 (1).jpg" alt="modelo-uñas">
-            </div>
-            <div>
                 <img src="images/uñas15 (1).jpg" alt="modelo-uñas">
             </div>
             <div>
@@ -79,9 +76,6 @@
             </div>
             <div>
                 <img src="images/uñas17 (1).jpg" alt="modelo-uñas">
-            </div>
-            <div>
-                <img src="images/uñas18 (1).jpg" alt="modelo-uñas">
             </div>
             <div>
                 <img src="images/uñas19 (1).jpg" alt="modelo-uñas">
@@ -94,12 +88,6 @@
             </div>
             <div>
                 <img src="images/uñas22 (1).jpg" alt="modelo-uñas">
-            </div>
-            <div>
-                <img src="images/uñas23 (1).jpg" alt="modelo-uñas">
-            </div>
-            <div>
-                <img src="images/uñas24 (1).jpg" alt="modelo-uñas">
             </div>
             <div>
                 <img src="images/uñas25 (1).jpg" alt="modelo-uñas">
@@ -132,12 +120,6 @@
                 <img src="images/uñas34 (1).jpg" alt="modelo-uñas">
             </div>
             <div>
-                <img src="images/uñas35 (1).jpg" alt="modelo-uñas">
-            </div>
-            <div>
-                <img src="images/uñas36 (1).jpg" alt="modelo-uñas">
-            </div>
-            <div>
                 <img src="images/uñas37 (1).jpg" alt="modelo-uñas">
             </div>
             <div>
@@ -146,7 +128,15 @@
             <div>
                 <img src="images/uñas40 (1).jpg" alt="modelo-uñas">
             </div>
-
+            <div>
+                <img src="images/uñas42 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas43 (1).jpg" alt="modelo-uñas">
+            </div>
+            <div>
+                <img src="images/uñas44 (1).jpg" alt="modelo-uñas">
+            </div>
         </section>
         <div class="fijowhat">
             <a href="https://wa.me/c/972549052905" target="_blank"><img src="images/whatsapp.png" width="50px" alt="whatsapp"></a>
@@ -159,7 +149,7 @@
                 <a href="#" target="_blank"><i class="fas fa-envelope-square"></i></a>
                 <a href="https://www.facebook.com/Jimenails-106906117826736" target="_blank"><i class="fab fa-facebook-square"></i></a>
                 <a href="https://www.instagram.com/jimenails_01/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                <a href="" target="_blank"><i class="fab fa-whatsapp-square"></i></a>
+                <a href="https://wa.me/c/972549052905" target="_blank"><i class="fab fa-whatsapp-square"></i></a>
             </div>
         </div>
 
