jimenais y clon google añadidos

--- a/index.html
+++ b/index.html
@@ -78,15 +78,23 @@
                 </div>
                 <div class="portafolio-div">
                     <h2>Sobekco</h2>
-                    <a href="portafolio/Sobekco/sobekco.html"><img src="images/portafolio1.jpg" alt="Hiddle" width="300px"></a>
+                    <a href="portafolio/Sobekco/sobekco.html"><img src="images/portafolio1.jpg" alt="Sobekco" width="300px"></a>
                 </div>
                 <div class="portafolio-div">
                     <h2>PracticePlatzi</h2>
-                    <a href="#"><img src="images/portafolio3.jpg" alt="Hiddle" width="300px"></a>
+                    <a href="#"><img src="images/portafolio3.jpg" alt="PracticePlatzi" width="300px"></a>
                 </div>
                 <div class="portafolio-div">
                     <h2>Article Preview</h2>
-                    <a href="portafolio/ArticlePreview/articlepreview.html"><img src="images/portafolio4.jpg" alt="Hiddle" width="300px"></a>
+                    <a href="portafolio/ArticlePreview/articlepreview.html"><img src="images/portafolio4.jpg" alt="ArticlePreview" width="300px"></a>
+                </div>
+                <div class="portafolio-div">
+                    <h2>Jimenails</h2>
+                    <a href="portafolio/jimenails/jimenails.html"><img src="images/portafolio5.jpg" alt="Jimenails" width="300px"></a>
+                </div>
+                <div class="portafolio-div">
+                    <h2>Clon Google</h2>
+                    <a href="portafolio/ClonGoogle/google.html"><img src="images/portafolio6.jpg" alt="Clon" width="300px"></a>
                 </div>
             </div>
         </section>
