--- a/portafolio/propuesta/propuesta.html
+++ b/portafolio/propuesta/propuesta.html
@@ -88,7 +88,7 @@
        
        <div class="cont2">
             <div class="div1">
-                <a href="https://wa.link/vdfryg" class="boton" id="si">si</a> 
+                <a href="https://wa.link/fe9qdw" class="boton" id="si">si</a> 
             </div>
             <div class="div1">
                 <a href="#" id="no" class="boton">no</a>
